--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,19 @@
-.header {
+body {
     background-color: #1F2935;
+}
+.header {
     width: 100%;
-    position: fixed;
-    z-index: 1;
 }
 .logo-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: relative;
     width: 100%;
     height: 150px;
@@ -20,9 +26,15 @@
     font-weight: 900;
 }
 nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 nav ul li {
     margin: 0 50px 0 0;
@@ -66,14 +78,25 @@ nav ul li a:hover::after {
     display: none;
 }
 .header-middle {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 30px 0 0 140px;
 }
 .header-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .greetings {
     margin-bottom: 33px;
@@ -106,6 +129,8 @@ nav ul li a:hover::after {
     font-family: 'Poppins', sans-serif;
 }
 .buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .hire-me {
@@ -159,4 +184,293 @@ nav ul li a:hover::after {
     bottom: 0;
     right: 0;
     width: 100%;
+}
+.about-us {
+    margin-top: 40px;
+}
+.divide-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 auto;
+}
+.title {
+    color: #0ABEAD;
+    font-size: 48px;
+    font-weight: 700;
+    font-family: "Poppins", sans-serif;
+}
+.subtitle {
+    margin: 20px auto 20px auto;
+    opacity: 0.7098039215686275;
+    color: lightgray;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+    letter-spacing: 3px;
+}
+.lines {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 240px;
+    height: 50px;
+    position: relative;
+  }
+.line1 {
+    width: 100%;
+    height: 4px;
+    background: #0ABEAD;
+  }
+.line2 {
+    width: 40px;
+    height: 11px;
+    background: #0ABEAD;
+    border-radius: 3px;
+    position: absolute;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+.bg-image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    width: 100%;
+    height: 670px;
+    margin: 50px auto;
+}
+.about-us-bg {
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 1170px;
+    width: 100%;
+    height: 650px;
+    background-color: #e5efe2;
+    -webkit-box-shadow: 3px 3px 25px 3px #0ABEAD;
+            box-shadow: 3px 3px 25px 3px #0ABEAD;
+}
+.about-us-image {
+    max-width: 1010px;
+    width: 100%;
+    height: 675px;
+    position: absolute;
+    z-index: 1;
+    left: 50px;
+}
+.about-us-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 430px;
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 800px;
+    z-index: 2;
+}
+.about-us-title {
+    color: #333333;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+}
+.about-us-description {
+    margin-top: 24px;
+    color: #333333;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+    text-align: justify;
+}
+.list-name {
+    margin-top: 79px;
+    color: #0ABEAD;
+    font-size: 18px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+}
+.about-us-ul {
+    margin: 10px 0 40px 0;
+}
+.about-us-ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 10px auto;
+}
+.about-us-ul li span {
+    color: #333333;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+}
+.services-boxes {
+    margin-top: 40px;
+}
+.boxes {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    position: relative;
+    max-width: 1170px;
+    width: 100%;
+    margin: 50px auto;
+}
+.box {
+    width: 370px;
+    height: 370px;
+    margin: 0 0 30px 0;
+}
+.box:nth-child(1) {
+    background: #8540FF;
+}
+.box:nth-child(2) {
+    background: #FFC50C; 
+}
+.box:nth-child(3) {
+    background: #EC407A; 
+ }
+.box:nth-child(4) {
+    background: #FF6331; 
+ }
+.box:nth-child(5) {
+    background: #13B6FF; 
+ }
+.box:nth-child(6) {
+    background: #49AF46; 
+ }
+ .box-image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;  
+    width: 100%;
+    height: 66px;
+    margin: 40px auto 0 auto;
+ }
+.box-title p {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    color: #FFFFFF;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 40px;
+}
+.box-about {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+    width: 267px;
+    margin: 30px auto 0 auto;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.2;
+}
+.box-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 131px;
+    height: 45px;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 22.5px;
+    border: 2px solid #FFFFFF;
+    margin: 20px auto 0 auto;
+}
+.box-button:hover {
+    color: #1c334b;
+    border-radius: 22.5px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+.resume-chart {
+    margin-top: 10px;
+}
+.resume-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    height: 500px;
+}
+.portfolio-works {
+    margin-top: 40px;
 }
