--- a/css/style.css
+++ b/css/style.css
@@ -469,8 +469,69 @@ nav ul li a:hover::after {
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
-    height: 500px;
+    height: 416px;
 }
+.resume-about {
+    display: flex;
+    justify-content: left;
+    width: 370px;
+    height: 416px;
+    background-color: #e5efe2;
+    box-shadow: 2px 2px 10px 2px #0abead; 
+}
+.resume-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+    position: relative;
+}
+.row {
+    display: flex;
+    align-items: center;
+}
+.row:first-child {
+    margin-top: 54px;
+}
+.row:last-child {
+    margin-bottom: 54px;
+}
+.row p {
+    color: #333333;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+}
+.circle {
+    background: #0ABEAD;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.resume-pics {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 42px;
+    height: 416px;
+    background: #0ABEAD;
+    position: absolute;
+}
+.resume-pics img {
+    cursor: pointer;
+}
+.resume-pics img:first-child {
+    margin-top: 67px;
+}
+.resume-pics img:last-child {
+    margin-bottom: 71px;
+}
+
 .portfolio-works {
     margin-top: 40px;
 }
