--- a/css/style.css
+++ b/css/style.css
@@ -883,34 +883,112 @@ nav ul li a:hover::after {
     margin: 50px auto;
 }
 .pricing-box {
-    width: 370px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    max-width: 370px;
+    width: 100%;
     height: 600px;
     background: #e5efe2;
-    position: relative;
 }
-.pricing-colored-box {
-    position: absolute;
-    display: -webkit-box;
-    display: -ms-flexbox;
+.pricing-colored-box1 {
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    width: 370px;
+    flex-direction: column;;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    max-width: 370px;
+    width: 100%;
     height: 170px;
-}    
-.pricing-colored-box:nth-child(1) {
+}
+.pricing-colored-box2 {
+    display: flex;
+    flex-direction: column;;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    max-width: 370px;
+    width: 100%;
+    height: 170px;
+} 
+.pricing-colored-box3 {
+    display: flex;
+    flex-direction: column;;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    max-width: 370px;
+    width: 100%;
+    height: 170px;
+}     
+.pricing-colored-box1 {
     background: #FF6331;
 }
-.pricing-colored-box:nth-child(2) {
+.pricing-colored-box2 {
     background: #803AFB;
 }
-.pricing-colored-box:nth-child(3) {
+.pricing-colored-box3 {
     background: #F5276C;
+}
+.colored-title {
+    color: #fff;
+    font-size: 36px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+}
+.colored-price {
+    margin: 19px auto;
+    color: #fff;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+}
+.colored-descr {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+}
+.pricing-box ul {
+    margin-top: 45px;
+}
+.pricing-box li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.pricing-text {
+    color: #333333;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+}
+.pricing-plan1, .pricing-plan2, .pricing-plan3 {
+    margin-bottom: 45px;
+    width: 200px;
+    height: 60px;
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+.pricing-plan1 {
+    background: #F57F17;
+}
+.pricing-plan2 {
+    background: #803AFB;
+}
+.pricing-plan3 {
+    background: #F5276C;
+}
+.contact-section {
+    margin-top: 40px;
 }
