--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     position: relative;
     width: 100%;
     height: 150px;
-    padding: 0px 90px 0 140px;
+    padding: 0px 7% 0 10%;
 }
 .logo a {
     color:#0ABEAD;
@@ -37,7 +37,7 @@ nav ul {
             align-items: center;
 }
 nav ul li {
-    margin: 0 50px 0 0;
+    margin: 0 30px 0 0;
 }
 nav ul li a {
     position: relative;
@@ -87,7 +87,8 @@ nav ul li a:hover::after {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 30px 0 0 140px;
+    padding: 30px 0 0 10%;
+    width: 100%;
 }
 .header-content {
     display: -webkit-box;
@@ -97,6 +98,8 @@ nav ul li a:hover::after {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+            width: 100%;
+            height: 100%;
 }
 .greetings {
     margin-bottom: 33px;
@@ -135,7 +138,8 @@ nav ul li a:hover::after {
 }
 .hire-me {
     margin-right: 30px;
-    width: 200px;
+    max-width: 200px;
+    width: 100%;
     height: 60px;
     background: #0ABEAD;
     color: #fff;
@@ -151,7 +155,8 @@ nav ul li a:hover::after {
     -o-border-radius: 30px;
 }
 .get-resume {
-    width: 200px;
+    max-width: 200px;
+    width: 100%;
     height: 60px;
     background: #F57F17;
     color: #fff;
@@ -284,7 +289,10 @@ nav ul li a:hover::after {
     height: 675px;
     position: absolute;
     z-index: 1;
-    left: 50px;
+    left: 3%;
+}
+.about-us-image img {
+    width: 100%;
 }
 .about-us-content {
     display: -webkit-box;
@@ -298,7 +306,7 @@ nav ul li a:hover::after {
     width: 100%;
     position: absolute;
     top: 60px;
-    left: 800px;
+    left: 55%;
     z-index: 2;
 }
 .about-us-title {
@@ -363,7 +371,8 @@ nav ul li a:hover::after {
     margin: 50px auto;
 }
 .box {
-    width: 370px;
+    max-width: 370px;
+    width: 100%;
     height: 370px;
     margin: 0 0 30px 0;
 }
@@ -417,7 +426,8 @@ nav ul li a:hover::after {
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
-    width: 267px;
+    max-width: 267px;
+    width: 100%;
     margin: 30px auto 0 auto;
     color: #FFFFFF;
     font-size: 16px;
@@ -439,7 +449,8 @@ nav ul li a:hover::after {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 131px;
+    max-width: 131px;
+    width: 100%;
     height: 45px;
     color: #FFFFFF;
     font-size: 16px;
@@ -640,7 +651,8 @@ nav ul li a:hover::after {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    width: 440px;
+    max-width: 440px;
+    width: 100%;
     height: 416px;
     background-color: #e5efe2;
     -webkit-box-shadow: 2px 2px 10px 2px #0abead;
@@ -732,7 +744,8 @@ nav ul li a:hover::after {
 }
 
 .portfolio-section {
-    width: 900px;
+    max-width: 900px;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -870,6 +883,7 @@ nav ul li a:hover::after {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    flex-wrap: wrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -991,4 +1005,113 @@ nav ul li a:hover::after {
 }
 .contact-section {
     margin-top: 40px;
+}
+.map-contact {
+    margin-top: 50px;
+    position: relative;
+}
+.map {
+    width: 100%;
+    height: 600px;
+}
+.getintouch {
+    position: absolute;
+    right: 15%;
+    bottom: 10%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    max-width: 460px;
+    width: 100%;
+    height: 500px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 15px 3px #0ABEAD;
+}
+.getintouch p {
+    margin-left: -175px;
+    color: #0ABEAD;
+    font-size: 36px;
+    font-weight: 700;
+    font-family: "Poppins", sans-serif;
+}
+.contact-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contact-input input {
+    margin-bottom: 15px;
+    padding-left: 15px;
+    max-width: 400px;
+    width: 100%;
+    height: 40px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 3px #0ABEAD;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+textarea {
+    margin-bottom: 10px;
+    padding-left: 15px;
+    max-width: 400px;
+    width: 100%;
+    height: 140px;
+    outline: none;
+    resize: none;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 3px #0ABEAD;
+}
+.contact-submit {
+    max-width: 400px;
+    width: 100%;
+    height: 40px;
+    background: #0ABEAD;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 75px;
+}
+footer p {
+    margin-left: 5%;
+    color: lightgray;
+    font-size: 18px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+}
+.socials {
+    margin-right: 5%;
+    display: flex;
+}
+.socials a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    margin-right: 20px;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 25px;
+    background: #0ABEAD;
 }
