--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,8 @@ nav ul li a:hover::after {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -897,41 +898,79 @@ nav ul li a:hover::after {
     margin: 50px auto;
 }
 .pricing-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 370px;
     width: 100%;
     height: 600px;
     background: #e5efe2;
 }
 .pricing-colored-box1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;;
+    -webkit-box-pack: center;;
+        -ms-flex-pack: center;;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 370px;
     width: 100%;
     height: 170px;
 }
 .pricing-colored-box2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;;
+    -webkit-box-pack: center;;
+        -ms-flex-pack: center;;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 370px;
     width: 100%;
     height: 170px;
 } 
 .pricing-colored-box3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;;
+    -webkit-box-pack: center;;
+        -ms-flex-pack: center;;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 370px;
     width: 100%;
     height: 170px;
@@ -968,8 +1007,12 @@ nav ul li a:hover::after {
     margin-top: 45px;
 }
 .pricing-box li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 30px;
 }
 .pricing-text {
@@ -1018,15 +1061,24 @@ nav ul li a:hover::after {
     position: absolute;
     right: 15%;
     bottom: 10%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 460px;
     width: 100%;
     height: 500px;
     background-color: #FFFFFF;
-    box-shadow: 0px 0px 15px 3px #0ABEAD;
+    -webkit-box-shadow: 0px 0px 15px 3px #0ABEAD;
+            box-shadow: 0px 0px 15px 3px #0ABEAD;
 }
 .getintouch p {
     margin-left: -175px;
@@ -1036,9 +1088,16 @@ nav ul li a:hover::after {
     font-family: "Poppins", sans-serif;
 }
 .contact-input {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .contact-input input {
     margin-bottom: 15px;
@@ -1049,7 +1108,8 @@ nav ul li a:hover::after {
     outline: none;
     border: none;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px 3px #0ABEAD;
+    -webkit-box-shadow: 0px 0px 10px 3px #0ABEAD;
+            box-shadow: 0px 0px 10px 3px #0ABEAD;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
@@ -1065,7 +1125,8 @@ textarea {
     resize: none;
     border: none;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px 3px #0ABEAD;
+    -webkit-box-shadow: 0px 0px 10px 3px #0ABEAD;
+            box-shadow: 0px 0px 10px 3px #0ABEAD;
 }
 .contact-submit {
     max-width: 400px;
@@ -1085,9 +1146,15 @@ textarea {
     -o-border-radius: 20px;
 }
 footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 100%;
     height: 75px;
 }
@@ -1100,12 +1167,20 @@ footer p {
 }
 .socials {
     margin-right: 5%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .socials a{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 45px;
     width: 45px;
     border-radius: 50%;
